Phase 1: test safety net, CI, and credential-redaction fixes
- ScalaTest + mockito bridge; 74 assertions across 9 suites covering
  ChunkUtil, CSVReader, AIUtil parsing, TokenGuard, SQLUtil,
  PipelineValidatorUtil, GuidV5, LogRedactUtil
- New ci.yml runs scalafmtCheckAll + test on pushes/PRs; docker-publish
  now runs tests before assembly
- LogRedactUtil.redactJdbcUrl masks userinfo passwords and
  password/token-style params; applied at all six JDBC URL logging
  sites (Postgres loader status, PGVector loader/search, Snowflake,
  Databricks) so credentials no longer reach logs or persisted job
  status
- VaultSecretsUtil: printStackTrace -> SLF4J error logging

Per plans/datrisserver-improvement-plan.md Phase 1.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>